--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer base {
+  /* Custom scrollbar styling. Thanks @pranathiperii. */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--border));
+    border-radius: 5px;
+  }
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: hsl(var(--border)) transparent;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -16,7 +34,7 @@ body {
   }
 
   .container-wrapper {
-    @apply border-border/30 dark:border-border mx-auto w-full min-[1800px]:max-w-[1536px] min-[1800px]:border-x;
+    @apply mx-auto w-full border-border/30 dark:border-border min-[1800px]:max-w-[1536px] min-[1800px]:border-x;
   }
   .container {
     @apply mx-auto max-w-[1536px] px-4 xl:px-6 2xl:px-4;
